main.css
.cover-main, section.content {
    padding-left: 30%;
}

.name {
    color: white !important;
    font-size: 4rem !important;
}


.role {
    color: white;
    margin: 0;
}

.logo {
    width: 100px;
    height: 100px;
    margin: 0 auto;
    position: relative;
}

.logo svg {
    width: 100%;
    height: 100%;
}

.profile-img {
    background-image: url("./assets/mohaa.jpg");
    background-size: cover;
    background-repeat: no-repeat;
    width: 30%;
    height: 100%;
    position: fixed;
    left: 0;
    top: 0;
}

.contact-details {
   display: flex;
   align-items: center;
   justify-content: center;
}

.contact-details * {
    color: #bbdefb !important;
}

.contact-details  svg {
    margin-right: 0.4rem;
}

.contact-details > * {
   margin: 0 0.6rem;
}


.contact-details p, .contact-details a {
    display: flex;
    align-items: center;
}

.panel {
    display:flex; 
    justify-content: center; 
    margin-top: 1rem;
    align-items: center;
    color: white;
}

.social-links {
    text-decoration: underline !important; 
    color: #2196f3 !important;
    margin: 0 0.4rem; 
    width: 20px;
    height: 20px;
}

.social-links svg {
    width: 100%;
    height: 100%;
    fill: white;
}

.download-resume {
    padding: 0.4rem 1rem;
    font-family: inherit;
    border-radius: 1rem;
    border: 0;
    color: white;
    background-color: cadetblue;
    cursor: pointer;
}

.button-wrapper {
    margin-top: 2rem;
}

.pipeline {
    width: 1px;
    height: 20px;
    background-color: white;
    margin-left: 1rem;
}

section.cover p {
    margin: 0;
}

.details-card-wrapper {
    display: flex;
    flex-wrap: wrap;

}

.detail-card {
    border: 1px solid #ccc;
    display: flex;
    flex-wrap: nowrap;
    flex-direction: column;
    flex: 1 1;
    min-width: 200px;
    /* border-radius: 10px; */
    /* margin: 0.2rem; */
    /* height: 100px; */
    padding: 1rem;
    align-items: center;
    /* justify-content: center; */
    justify-content: space-between;
    align-content: space-between;
}

.detail-card h3 {
    margin: 0;
}

.details-card-count {
    font-size: 4rem;
    font-weight: bold;
}

.details-card-buttons {
    display: flex;
    align-items: center;
    flex-wrap: wrap;
    justify-content: center;
}

.details-card-buttons button {
    padding: 0.2rem 0.6rem;
    font-family: inherit;
    border-radius: 1rem;
    border: 0;
    color: white;
    background-color: #5c6bc0;
    margin: 0.1rem;
    cursor: pointer;
}

.tech-logo {
    max-width: 90px;
    margin-right: 1rem;
    margin-bottom: 1rem;
    padding: 0.4rem;
    position: relative;
    text-align: center;
    border: 1px solid #eee;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.tech-info {
    border-top: 1px solid #eee;
}

